@@ -167,13 +167,13 @@
       <dependency>
         <groupId>javax.faces</groupId>
         <artifactId>jsf-api</artifactId>
-        <version>1.2_09_jboss</version>
+        <version>1.2_12</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>javax.faces</groupId>
         <artifactId>jsf-impl</artifactId>
-        <version>1.2_09_jboss</version>
+        <version>1.2_12</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -589,37 +589,37 @@
       <dependency>
         <groupId>org.jboss.seam</groupId>
         <artifactId>jboss-seam</artifactId>
-        <version>2.0.3.CR1-NX3</version>
+        <version>2.1.0.SP1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.jboss.seam</groupId>
         <artifactId>jboss-seam-remoting</artifactId>
-        <version>2.0.3.CR1</version>
+        <version>2.1.0.SP1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.jboss.seam</groupId>
         <artifactId>jboss-seam-ui</artifactId>
-        <version>2.0.3.CR1</version>
+        <version>2.1.0.SP1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.jboss.seam</groupId>
         <artifactId>jboss-seam-mail</artifactId>
-        <version>2.0.3.CR1</version>
+        <version>2.1.0.SP1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.jboss.seam</groupId>
         <artifactId>jboss-seam-debug</artifactId>
-        <version>2.0.3.CR1</version>
+        <version>2.1.0.SP1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.jboss.el</groupId>
         <artifactId>jboss-el</artifactId>
-        <version>2.0.1.GA</version>
+        <version>1.0_02.CR2</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -834,7 +834,7 @@
       <dependency>
         <groupId>com.sun.facelets</groupId>
         <artifactId>jsf-facelets</artifactId>
-        <version>1.1.11</version>
+        <version>1.1.15.B1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -2167,7 +2167,7 @@
           <executions>
             <execution>
               <configuration>
-                <extraJvmArgs>-Xmx512M -Xms128M</extraJvmArgs>
+                <extraJvmArgs>-Xmx512M -Xms128M -XX:MaxPermSize=384m</extraJvmArgs>
               </configuration>
               <goals>
                 <goal>compile</goal>
